Update jvm.md